tests/snapshots/regression/precedence__comparison_vs_arithmetic.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/comparison_vs_arithmetic.flx
exit_code: 1

[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 3 errors • tests/fixtures/precedence/comparison_vs_arithmetic.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:1:1
  |
1 | print(1 + 2 == 3);
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:1:1
  |
1 | print(1 + 2 == 3);
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/comparison_vs_arithmetic.flx:2:1
  |
2 | print(1 < 2 + 3);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 3 errors.
