tests/snapshots/regression/precedence__unary_binds_tighter.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/precedence/unary_binds_tighter.flx
exit_code: 1

[ 1 of 17] Compiling  Assert
[ 2 of 17] Compiling  Debug
[ 3 of 17] Compiling  Array
[ 4 of 17] Compiling  List
[ 5 of 17] Compiling  Either
[ 6 of 17] Compiling  Eq
[ 7 of 17] Compiling  IO
[ 8 of 17] Compiling  Math
[ 9 of 17] Compiling  Num
[10 of 17] Compiling  Numeric
[11 of 17] Compiling  Option
[12 of 17] Compiling  Ord
[13 of 17] Compiling  Primops
[14 of 17] Compiling  Semigroup
[15 of 17] Compiling  Show
[16 of 17] Compiling  String
• 3 errors • tests/fixtures/precedence/unary_binds_tighter.flx
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
  | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  tests/fixtures/precedence/unary_binds_tighter.flx:1:1
  |
1 | print(-1 * 2);
  | ^^^^^^^^^^^^^^
  | -------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: Console).

  tests/fixtures/precedence/unary_binds_tighter.flx:2:1
  |
2 | print(!true && false);
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 3 errors.
